[package]
name = "installer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "databox-installer"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
sha2 = "0.10"
tar = "0.4"
xz2 = "0.1"
zip = "2"
