[package]
name = "connector-sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6.3", features = ["derive"] }
ldap3 = "0.12.1"
odbc-api = "29.0.0"
reqwest = "0.13.4"
serde = "1.0.229"
serde_json = "1.0.151"
tokio = { version = "1.53.1", features = ["full"] }
