[package]
name = "pos-edge-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6.3", features = ["derive"] }
hyper = { version = "1.11.0", features = ["server", "http1", "client"] }
hyper-util = { version = "0.1.20", features = ["server", "http1", "tokio", "client"] }
reqwest = { version = "0.13.4", features = ["native-tls"] }
tokio = { version = "1.53.1", features = ["full"] }
